--- a/lab-01/CMakeLists.txt
+++ b/lab-01/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
-project(lab_01 C)
+project(Cppfeladat)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab_01 main.c
-        basics.c
-        basics.h)
+add_executable(Cppfeladat main.cpp
+        Sources/functions.cpp
+        Headers/functions.h)
