--- a/lab-04/CMakeLists.txt
+++ b/lab-04/CMakeLists.txt
@@ -3,4 +3,7 @@ project(lab_04 C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(lab_04 main.c)
+add_executable(lab_04 main.c
+        Sources/functions.c
+        Headers/intArray.h
+        Sources/intArray.c)
